--- a/templates/sochart.html
+++ b/templates/sochart.html
@@ -9,6 +9,6 @@
   <p>{{ li['Song-Name'] }} by {{ li['Artist'] }} on the album {{ li['Album'] }} is number {{ li['Rank'] }} in the most-streamed songs on Spotify. It has {{ li['Streams-Millions'] }} billion streams.</p>
 
 	<!-- NOTE the way to link to a route: Use the function name -->
-	<p><a href="{{ url_for('index') }}">Return to the list</a> to select a different president.</p>
+	<p><a href="{{ url_for('index') }}">Return to the list</a> to select a different song.</p>
 
 {% endblock %}
